Added a link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
         </div>
       </div>
     </div>
+    <div>
+      <a class="id" href="https://github.com/giovannamaral/weatherapp">
+        Open-source code,
+      </a>
+      by Giovanna Amaral
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
