--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,6 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Wheather App</title>
     <style></style>
@@ -64,9 +65,12 @@
                       </div>
                     </div>
                     <div class="col">
-                      <i
-                        class="fas fa-cloud-showers-heavy current-weather-icon"
-                      ></i>
+                      <img
+                        src="http://openweathermap.org/img/wn/10d@2x.png"
+                        alt="rainy"
+                        class="current-weather-icon"
+                        id="icon"
+                      ></img>
                     </div>
                   </div>
                 </div>
