Implemented unit conversion

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                   class="form-control"
                   id="exampleInputEmail1"
                   placeholder="Enter your city"
+                  autocomplete="off"
                 />
               </div>
               <div class="col-4">
@@ -60,8 +61,8 @@
                     <div class="text-center col">
                       <div class="current-temperature">20</div>
                       <div class="temperature-scale">
-                        <a id="celsius" href="#">°C </a>|
-                        <a id="fahrenheit" href="#">°F</a>
+                        <a id="celsius-link" href="#">°C </a>|
+                        <a id="fahrenheit-link" href="#">°F</a>
                       </div>
                     </div>
                     <div class="col">
