--- a/index.html
+++ b/index.html
@@ -99,80 +99,7 @@
               </div>
             </div>
 
-            <div class="col-4 text-center py-5 px-5">
-              <div class="row">
-                <div class="col-6">
-                  <div class="row week-forecast">
-                    <div class="col-6"><strong>mon</strong></div>
-                    <div class="col-6">
-                      <i class="fas fa-cloud-showers-heavy"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6"><strong>19°| 21°</strong></div>
-              </div>
-              <div class="row">
-                <div class="col-6">
-                  <div class="row week-forecast">
-                    <div class="col-6"><strong>tue</strong></div>
-                    <div class="col-6">
-                      <i class="fas fa-cloud-showers-heavy"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6"><strong>19°| 22°</strong></div>
-              </div>
-              <div class="row">
-                <div class="col-6">
-                  <div class="row week-forecast">
-                    <div class="col-6"><strong>wed</strong></div>
-                    <div class="col-6"><i class="fas fa-sun"></i></div>
-                  </div>
-                </div>
-                <div class="col-6"><strong>19°| 24°</strong></div>
-              </div>
-              <div class="row">
-                <div class="col-6">
-                  <div class="row week-forecast">
-                    <div class="col-6"><strong>thu</strong></div>
-                    <div class="col-6"><i class="fas fa-cloud-sun"></i></div>
-                  </div>
-                </div>
-                <div class="col-6"><strong>19°| 26°</strong></div>
-              </div>
-              <div class="row">
-                <div class="col-6">
-                  <div class="row week-forecast">
-                    <div class="col-6"><strong>fri</strong></div>
-                    <div class="col-6">
-                      <i class="fas fa-cloud-sun-rain"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6"><strong>21°| 28°</strong></div>
-              </div>
-              <div class="row">
-                <div class="col-6">
-                  <div class="row week-forecast">
-                    <div class="col-6"><strong>sat</strong></div>
-                    <div class="col-6">
-                      <i class="fas fa-cloud-sun-rain"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6"><strong>22°| 28°</strong></div>
-              </div>
-              <div class="row">
-                <div class="col-6">
-                  <div class="row week-forecast">
-                    <div class="col-6"><strong>sun</strong></div>
-                    <div class="col-6">
-                      <i class="fas fa-cloud-showers-heavy"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6"><strong>22°| 24°</strong></div>
-              </div>
+            <div class="col-4 text-center py-5 px-5" id="forecast">
             </div>
           </div>
         </div>
