--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
                   <div class="row align-items-center">
                     <div class="text-center col">
                       <div class="current-temperature">20</div>
-                      <div class="temperature-scale">
-                        <a id="celsius-link" href="#">°C </a>|
-                        <a id="fahrenheit-link" href="#">°F</a>
-                      </div>
+                      <span class="temperature-scale">°C </span>
+                      
                     </div>
                     <div class="col">
                       <img
