--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
       <div>
       <a class="id" href="https://github.com/giovannamaral/weatherapp">
-        Open-source code,
+        Open-source code
       </a>
       by Giovanna Amaral
     </div>
